--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "test": "echo \"No tests.\"",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
