--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "countdowner-site",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "react-slick": "^0.24.0"
   },
   "scripts": {
     "start": "react-scripts start",
